syntax = "proto3";

option go_package = "github.com/Sweetloveinyourheart/micro/proto";

service Property {
    rpc GetAssets(GetAssetsRequest) returns (GetAssetsResponse);
    rpc AddAsset(AddAssetRequest) returns (ResultResponse);
    rpc ModifyAsset(ModifyAssetRequest) returns (ResultResponse);
    rpc DisableAsset(DisableAssetRequest) returns (ResultResponse);

    rpc AddProperty(NewProperty) returns (ResultResponse);
}

// Common

message ResultResponse {
    bool success = 1;
}

// Assets

message GetAssetsRequest {
    string assetType = 1;
}

message Assets {
    uint32 Id = 1;
    string iconURL = 2;
    string name = 3;
}

message GetAssetsResponse {
    repeated Assets assets = 1;
}

message AddAssetRequest {
    string assetType = 1;
    string iconURL = 2;
    string name = 3;
}

message ModifyAssetRequest {
    string assetType = 1;
    uint32 id = 2;
    string iconURL = 3;
    string name = 4;
}

message DisableAssetRequest {
    string assetType = 1;
    uint32 id = 2;
}

// Property

message NewDestination {
    string country = 1;
    string city = 2;
    float latitude = 3;
    float longitude = 4;
}

message NewProperty {
    uint32 host_id = 1;
    string title = 2;
    string description = 3;
    float price = 4;
    uint32 category_id = 5;
    uint32 amenity_id = 6;
    NewDestination destination = 7;
}